@@ -2,6 +2,7 @@
 <html lang="">
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="media/icon.jpg">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta charset="utf-8">
     <title>JBNCK - About me and this website</title>
@@ -25,6 +26,8 @@
               var element = document.getElementById("main_nav_element2");
               element.style.display = "none"
               var element = document.getElementById("main_nav_element3");
+              element.style.display = "none"
+              var element = document.getElementById("main_nav_element4");
               element.style.display = "none"
               var element = document.getElementById("page_indicator1");
               element.setAttribute("style", "display: block;");
@@ -54,6 +57,7 @@
       <div id="navbar">
         <a id="main_nav_element1" class="nav_element nav_element_home" href="index.html">Home</a>
         <a id="main_nav_element2" class="nav_element" href="downloads.html">Downloads</a>
+        <a id="main_nav_element4" class="nav_element" href="projects.html">Projects</a>
         <a id="main_nav_element3" class="nav_element_current" href="about.html">About</a>
         <button type="button" id="mobile_nav_element1" class="mobile_nav_element" onclick="pageIndicator()" style="display: none;"><a href="#TOP" style="color: white;"> ☰ Menu</a></button>
       </div>
@@ -62,6 +66,7 @@
         <a> </a> <br>
       <a class="indicator_element indicator_element_first" href="index.html">Home</a> <hr>
       <a class="indicator_element" href="downloads.html">Downloads</a> <hr>
+      <a class="indicator_element" href="projects.html">Projects</a> <hr>
       <a class="indicator_element indicator_element_current" href="about.html">About</a>
       <a> </a> <br>
       <a> </a> <br>
@@ -81,7 +86,7 @@
       <p>This website uses MataUX Design. Design guidelines can be found on my GitHub.</p>
       <a href="styles.css" download>Download this site's stylesheet</a>
       <h2>Privacy policy</h2>
-      <p>Information on what data we collect can be found <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">here.</a></p>
+      <p>Information on what data I collect can be found <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">here.</a></p>
     </main>
   </body>
 </html>
