@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="media/icon.jpg">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta charset="utf-8">
     <title>JBNCK - The file repository</title>
@@ -25,6 +26,8 @@
               var element = document.getElementById("main_nav_element2");
               element.style.display = "none"
               var element = document.getElementById("main_nav_element3");
+              element.style.display = "none"
+              var element = document.getElementById("main_nav_element4");
               element.style.display = "none"
               var element = document.getElementById("page_indicator1");
               element.setAttribute("style", "display: block;");
@@ -54,6 +57,7 @@
       <div id="navbar">
         <a id="main_nav_element1" class="nav_element nav_element_home" href="index.html">Home</a>
         <a id="main_nav_element2" class="nav_element_current" href="downloads.html">Downloads</a>
+        <a id="main_nav_element4" class="nav_element" href="projects.html">Projects</a>
         <a id="main_nav_element3" class="nav_element" href="about.html">About</a>
         <button type="button" id="mobile_nav_element1" class="mobile_nav_element" onclick="pageIndicator()" style="display: none;"><a href="#TOP" style="color: white;"> ☰ Menu</a></button>
       </div>
@@ -62,6 +66,7 @@
         <a> </a> <br>
       <a class="indicator_element indicator_element_first" href="index.html">Home</a> <hr>
       <a class="indicator_element indicator_element_current" href="downloads.html">Downloads</a> <hr>
+      <a class="indicator_element" href="projects.html">Projects</a> <hr>
       <a class="indicator_element" href="about.html">About</a>
       <a> </a> <br>
       <a> </a> <br>
@@ -73,6 +78,7 @@
     <main id="resize_main">
       <h1>The file repository</h1>
       <hr>
+      <p>For projects visit <a href="projects.html">the "Projects" tab.</a></p>
       <center><iframe height="600px" class="download_form" src="https://jbnck.github.io/WebsiteDownloadForm/index.html" frameborder="0"></iframe></center>
     </main>
   </body>
