@@ -5,7 +5,7 @@
     <link rel="icon" href="media/icon.jpg">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <meta charset="utf-8">
-    <title>JBNCK - Home</title>
+    <title>JBNCK - My personal projects</title>
     <script>
       function mobileResize(){
         if (navigator.userAgent.match(/Android/i)
@@ -55,59 +55,30 @@
 
     <header>
       <div id="navbar">
-        <a id="main_nav_element1" class="nav_element_current nav_element_home" href="index.html">Home</a>
+        <a id="main_nav_element1" class="nav_element nav_element_home" href="index.html">Home</a>
         <a id="main_nav_element2" class="nav_element" href="downloads.html">Downloads</a>
-        <a id="main_nav_element4" class="nav_element" href="projects.html">Projects</a>
+        <a id="main_nav_element4" class="nav_element_current" href="projects.html">Projects</a>
         <a id="main_nav_element3" class="nav_element" href="about.html">About</a>
         <button type="button" id="mobile_nav_element1" class="mobile_nav_element" onclick="pageIndicator()" style="display: none;"><a href="#TOP" style="color: white;"> ☰ Menu</a></button>
       </div>
     <div style="display: none;" class="page_indicator" id="page_indicator1" >
       <center>
         <a> </a> <br>
-      <a class="indicator_element indicator_element_first indicator_element_current" href="index.html">Home</a> <hr>
+      <a class="indicator_element indicator_element_first" href="index.html">Home</a> <hr>
       <a class="indicator_element" href="downloads.html">Downloads</a> <hr>
-      <a class="indicator_element" href="projects.html">Projects</a> <hr>
+      <a class="indicator_element indicator_element_current" href="projects.html">Projects</a> <hr>
       <a class="indicator_element" href="about.html">About</a>
       <a> </a> <br>
       <a> </a> <br>
 
       <button type="button" class="indicator_element_button" onclick="closePageIndicator()">&cross; Close</button>
       </center>
-    </div>      
+    </div>
     </header>
     <main id="resize_main">
-      <h1 name="TOP">Home</h1>
-      <hr>
-      <p>This website is still in an alpha stage. Expect bugs, inconsistencies, errors and/or other inconveniences.</p>
-      <p>Welcome to my website, I guess! This is a little side project that I'm doing in order to improve my web development skills. Have fun exploring it!</p>
-
-      <h2>Projects</h2>
-      <hr>
-      <p>A brief list of projects worth visiting. For a more detailed list with all the projects and descriptions click <a href="projects.html">here </a>or visit <a href="https://github.com/JBNCK">my GitHub.</a> Links are not clickable yet!</p>
-      <ul>
-          <li><a>Fairphone 3 debloater</a></li>
-          <li><a>Useless/Stupid Android Feature Remover</a></li>
-          <li><a>CLINOTE (Command line notes)</a></li>
-          <li><a>Shell script collection</a></li>
-      </ul>
-      <h2>Changelog</h2>
-      <hr>
-      <p>Recent changes to the website</p>
-      <center><iframe class="download_form" style="height: 400px;" src="CHANGELOG.txt" frameborder="0"></iframe></center>
+        <h1>My personal projects</h1>
+        <hr>
+        <p>PLACEHOLDER</p>
     </main>
-    <footer>
-      <center>
-      <div class="bottom_footer">
-        <br> <h2><a style="color: black;" class="bottom_footer_up" href="#TOP">Back to top</a></h2>
-        <a href="http://github.com/JBNCK/Website">Download this website</a> <br>
-        <a href="http://github.com/JBNCK/">Visit my GitHub</a> <br>
-        <a href="downloads.html">Non-GitHub projects</a> <br>
-        <a href="about.html">Privacy policy</a> <br>
-        
-        <a>  </a> <br>
-        <a>  </a> <br>
-      </div>
-      </center>
-    </footer>
   </body>
 </html>
